st/mesa: skip glDrawPixels/glBitmap-related code for ES build

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=32560